# AHRS

./: ahrs_aided.m  cali4inv.m  calibration_and_alignment.m  compare.m  gradient_descent.m  gradient_descent_magCali.m  ins_mechanization.m  qdVerify.m  quaternProd.m  tunning_algorithm.m
ahrs_platform/ahrs_c_pcsim/data/: FigurePlot.m
ahrs_platform/ahrs_c_pcsim_gd/: .gitignore  CMakeLists.txt  test.cpp
ahrs_platform/ahrs_c_pcsim_gd/module/fusion/: CMakeLists.txt
ahrs_platform/ahrs_c_pcsim_gd/module/fusion/inc/: fusion.h
ahrs_platform/ahrs_c_pcsim_gd/module/fusion/src/: fusion.cpp
ahrs_platform/ahrs_c_pcsim_gd/module/parser/: CMakeLists.txt
ahrs_platform/ahrs_c_pcsim_gd/module/parser/inc/: fusion.h  parser.h  training.h
ahrs_platform/ahrs_c_pcsim_gd/module/parser/src/: fusion.cpp  parser.cpp
ahrs_platform/ahrs_c_pcsim_gd/module/training/: CMakeLists.txt
ahrs_platform/ahrs_c_pcsim_gd/module/training/inc/: sample.h  training.h
ahrs_platform/ahrs_c_pcsim_gd/module/training/src/: training.cpp
ahrs_platform/ahrs_cpp_pcsim/: CodeFormat.sh  test.cpp
ahrs_platform/ahrs_cpp_pcsim/data/: gyroCaliDataEn.txt  gyroCaliDataUn.txt  gyroRawDataEn.txt  (+2 more)
ahrs_platform/ahrs_java_pcsim/: .project
data/: Calibration4INV.m  actionData.txt  audioAnalysis.m  dataConverter.m  interpolation.m  leonPingPong.txt  magTest.m  sensorData.txt  中速反手一次1.txt  中速反手一次2.txt  中速正手一次1.txt  中速正手一次2.txt  快速反手一次1.txt  快速反手一次2.txt  快速正手一次2.txt  正手上偏1次1.txt  正手上偏1次2.txt  正手下偏1次1.txt  正手下偏1次2.txt  正手田区1次1.txt  正手田区1次2.txt
data/test_algorithm/: CMakeLists.txt
doc/: algorithm_test.docx
(+73 files in other folders)
